--- a/bio-list.tex
+++ b/bio-list.tex
@@ -10,8 +10,6 @@ hid-sp18-405
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: 
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -26,8 +24,6 @@ hid-sp18-405
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: 
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -42,8 +38,6 @@ hid-sp18-405
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: 
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -58,8 +52,6 @@ hid-sp18-405
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: 
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -74,8 +66,80 @@ hid-sp18-405
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: 
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-419/technology/abstract-clive}
+
+\begin{IU}
+
+hid-sp18-419
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-clive.tex}{abstract-clive.tex}
+
+\begin{tiny}
+\begin{verbatim}
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-419/technology/abstract-hcatalog}
+
+\begin{IU}
+
+hid-sp18-419
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-hcatalog.tex}{abstract-hcatalog.tex}
+
+\begin{tiny}
+\begin{verbatim}
+chktex:
+Warning 15 in  line 6: No match found for `('.
+^ Warning 17 in ../hid-sp18-419/technology/abstract-hcatalog.tex line 9: Number
+of `(' doesn't match the number of `)'!
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-419/technology/abstract-neptune}
+
+\begin{IU}
+
+hid-sp18-419
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-neptune.tex}{abstract-neptune.tex}
+
+\begin{tiny}
+\begin{verbatim}
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-419/technology/abstract-opendaylight}
+
+\begin{IU}
+
+hid-sp18-419
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-opendaylight.tex}{abstract-opendaylight.tex}
+
+\begin{tiny}
+\begin{verbatim}
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-419/technology/abstract-pig}
+
+\begin{IU}
+
+hid-sp18-419
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-pig.tex}{abstract-pig.tex}
+
+\begin{tiny}
+\begin{verbatim}
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -90,14 +154,14 @@ hid-sp18-503
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: "../hid-sp18-503/technology/abstract-carbondata.tex", line 14: missing `\@'
+lacheck:
+"../hid-sp18-503/technology/abstract-carbondata.tex", line 15: missing `\@'
 before `.' in "HDFS."
-chktex: Warning 13 in ../hid-sp18-503/technology/abstract-carbondata.tex line 14:
+chktex:
+Warning 13 in ../hid-sp18-503/technology/abstract-carbondata.tex line 15:
 Intersentence spacing (`\@') should perhaps be used. and stores information like
 schema, in the header and footer co-located in HDFS.
-^ Warning 2 in ../hid-sp18-503/technology/abstract-carbondata.tex line 16: Non-
-breaking space (`~') should have been used. optimize queries \cite{hid-
-sp18-503-carbondata-docs}.                   ^
+^
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -112,13 +176,133 @@ hid-sp18-503
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 36 in ../hid-sp18-503/technology/abstract-edgent.tex line 6: You should
+chktex:
+Warning 36 in ../hid-sp18-503/technology/abstract-edgent.tex line 6: You should
 put a space in front of parenthesis. Many of the devices that form the internet
 of things(IoT) are sensors,
 ^ Warning 2 in ../hid-sp18-503/technology/abstract-edgent.tex line 23: Non-
 breaking space (`~') should have been used. and allows custom message hubs as
 well \cite{hid-sp18-503-edgent-docs}.                                         ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-511/technology/abstract-apttus}
+
+\begin{IU}
+
+hid-sp18-511
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-apttus.tex}{abstract-apttus.tex}
+
+\begin{tiny}
+\begin{verbatim}
+chktex:
+Warning 8 in ../hid-sp18-511/technology/abstract-apttus.tex line 3: Wrong length
+of dash may have been used. Apttus provides Quote-to-Cash artificial intelligent
+product for automating the end to end process of customer's intent to buy the
+product \& ultimately customer buying the product. Quote-to-cash provide full
+automation of customer relationship life cycle. This product helps in increasing
+the revenue of the product as Quote-to-Cash is heart of the business.
+\cites{hid-sp18-511-apttus}
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-511/technology/abstract-iics}
+
+\begin{IU}
+
+hid-sp18-511
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-iics.tex}{abstract-iics.tex}
+
+\begin{tiny}
+\begin{verbatim}
+chktex:
+Warning 8 in ../hid-sp18-511/technology/abstract-iics.tex line 3: Wrong length
+of dash may have been used. Informatica is one of the best Extract, Transform \&
+Load (ETL) provider in the market. Informatica provides product in other data
+related domain also like Master Data Management, data governance etc. So far
+Informatica was only in premise and now they have started moving all the
+products to cloud. With the cloud approach customer need not to worry about the
+patching, high availability of the servers, upgrade etc. Customer can focus on
+the logic of the data process \& all the infrastructure related activities will
+be taken care by cloud. \cites{hid-sp18-511-iics}
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-511/technology/abstract-linode}
+
+\begin{IU}
+
+hid-sp18-511
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-linode.tex}{abstract-linode.tex}
+
+\begin{tiny}
+\begin{verbatim}
+chktex:
+Warning 8 in ../hid-sp18-511/technology/abstract-linode.tex line 3: Wrong length
+of dash may have been used. Linode is a cloud service provider. It provide
+compute, storage \& networking services. Customers use Linode services on demand
+as infrastructure for their websites, web services and applications.\cites{hid-
+sp18-511-linode}
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-511/technology/abstract-rapidminer}
+
+\begin{IU}
+
+hid-sp18-511
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-rapidminer.tex}{abstract-rapidminer.tex}
+
+\begin{tiny}
+\begin{verbatim}
+chktex:
+Warning 8 in ../hid-sp18-511/technology/abstract-rapidminer.tex line 3: Wrong
+length of dash may have been used. RapidMiner is a data science software
+platform that provides an integrated environment for data preparation, machine
+learning, deep learning, text mining, and predictive analytics. The platform
+provides an easy drag and drop environment for easy and fast data science
+related operations. \cites{hid-sp18-511-rapidminer}
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-511/technology/abstract-treasuredata}
+
+\begin{IU}
+
+hid-sp18-511
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-treasuredata.tex}{abstract-treasuredata.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck:
+"../hid-sp18-511/technology/abstract-treasuredata.tex", line 3: missing `\ '
+after "view."
+chktex:
+Warning 12 in ../hid-sp18-511/technology/abstract-treasuredata.tex line 3:
+Interword spacing (`\ ') should perhaps be used. Treasure Data provide a
+platform to consolidate the customer data from different sources, integrate them
+\& see actionable customer view. this helps in understanding customer behavior
+easy and fast and take the actions accordingly.\cites{hid-sp18-511-treasuredata}
+^ Warning 8 in ../hid-sp18-511/technology/abstract-treasuredata.tex line 3:
+Wrong length of dash may have been used. Treasure Data provide a platform to
+consolidate the customer data from different sources, integrate them \& see
+actionable customer view. this helps in understanding customer behavior easy and
+fast and take the actions accordingly.\cites{hid-sp18-511-treasuredata}
+^
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -133,8 +317,8 @@ hid-sp18-513
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 2 in ../hid-sp18-513/technology/abstract-datameer.tex line 2: Non-
+chktex:
+Warning 2 in ../hid-sp18-513/technology/abstract-datameer.tex line 2: Non-
 breaking space (`~') should have been used. Datameer is self service, schema
 free Big Data Analytics tool which provides end to end analytics. Datameer is
 used in cleansing the data that was ingested or as it is being ingested, and
@@ -159,8 +343,8 @@ hid-sp18-513
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 2 in ../hid-sp18-513/technology/abstract-docker.tex line 2: Non-breaking
+chktex:
+Warning 2 in ../hid-sp18-513/technology/abstract-docker.tex line 2: Non-breaking
 space (`~') should have been used. Docker is an open platform for developers and
 sysadmins to build, ship, and run distributed applications, whether on laptops,
 data center VMs, or the cloud \cite{docker}. It is designed to make it easier to
@@ -200,8 +384,8 @@ hid-sp18-513
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 2 in ../hid-sp18-513/technology/abstract-neo4j.tex line 2: Non-breaking
+chktex:
+Warning 2 in ../hid-sp18-513/technology/abstract-neo4j.tex line 2: Non-breaking
 space (`~') should have been used. Neo4j is a graph database developed by Neo4j,
 Inc. It is an ACID-compliant transactional  database with graph storage and
 processing which in turn help data scientists to gain new perspectives on data.
@@ -225,8 +409,8 @@ hid-sp18-513
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 2 in ../hid-sp18-513/technology/abstract-oozie.tex line 2: Non-breaking
+chktex:
+Warning 2 in ../hid-sp18-513/technology/abstract-oozie.tex line 2: Non-breaking
 space (`~') should have been used. Apache Oozie is a workflow scheduler to
 manage Hadoop jobs. Workflows are defined as a collection of control flow and
 action nodes in a directed acyclic graph. Oozie  jobs can either be triggered
@@ -249,8 +433,8 @@ hid-sp18-513
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 2 in ../hid-sp18-513/technology/abstract-tableau.tex line 2: Non-
+chktex:
+Warning 2 in ../hid-sp18-513/technology/abstract-tableau.tex line 2: Non-
 breaking space (`~') should have been used. Tableau is the data visualization
 software that helps people to see and understand the data. Tableau can connect
 to almost any database, drag and drop to create visualizations, and share with a
@@ -273,34 +457,21 @@ hid-sp18-516
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: "../hid-sp18-516/technology/abstract-mariadb.tex", line 5: missing `\@' before
-`.' in "SQL."
-chktex: Warning 13 in ../hid-sp18-516/technology/abstract-mariadb.tex line 5:
-Intersentence spacing (`\@') should perhaps be used. MySQL. Michael "Monty"
-Widenius is the lead developer of MariaDB and        ^ Warning 18 in ../hid-
-sp18-516/technology/abstract-mariadb.tex line 5: Use either `` or '' as an
-alternative to `"'. MySQL. Michael "Monty" Widenius is the lead developer of
-MariaDB and                  ^ Warning 18 in ../hid-
-sp18-516/technology/abstract-mariadb.tex line 5: Use either `` or '' as an
-alternative to `"'. MySQL. Michael "Monty" Widenius is the lead developer of
-MariaDB and                        ^ Warning 2 in ../hid-
-sp18-516/technology/abstract-mariadb.tex line 6: Non-breaking space (`~') should
-have been used. also the founder of MySQL AB \cite{wiki-MariaDB}. It supports a
-broad                               ^ Warning 2 in ../hid-
-sp18-516/technology/abstract-mariadb.tex line 9: Non-breaking space (`~') should
-have been used. scalable \cite{mariadb-server}. “It includes XtraDB storage
-engine for           ^ Warning 2 in ../hid-sp18-516/technology/abstract-
-mariadb.tex line 15: Non-breaking space (`~') should have been used. wide
-variety of use cases” \cite{www-mariadb-org}. It is used to turn
-^ Warning 2 in ../hid-sp18-516/technology/abstract-mariadb.tex line 18: Non-
-breaking space (`~') should have been used. support GIS and JSON format
-\cite{www-mariabdb-org}. “MariaDB is                              ^ Warning 2 in
-../hid-sp18-516/technology/abstract-mariadb.tex line 20: Non-breaking space
-(`~') should have been used. world’s leading brands” \cite{about-mariadb}. It is
-used to support                              ^ Warning 2 in ../hid-
-sp18-516/technology/abstract-mariadb.tex line 21: Non-breaking space (`~')
-should have been used. enterprise needs from OLTP to analytics \cite{about-
-mariadb}.                                          ^
+lacheck:
+"../hid-sp18-516/technology/abstract-mariadb.tex", line 5: missing `\@' before
+`.' in "SQL." "../hid-sp18-516/technology/abstract-mariadb.tex", line 6: double
+space at " ~" "../hid-sp18-516/technology/abstract-mariadb.tex", line 9: double
+space at " ~" "../hid-sp18-516/technology/abstract-mariadb.tex", line 11: double
+space at " ~"
+chktex:
+Warning 13 in ../hid-sp18-516/technology/abstract-mariadb.tex line 5:
+Intersentence spacing (`\@') should perhaps be used. MySQL. Michael ``Monty''
+Widenius is the lead developer of MariaDB and        ^ Warning 39 in ../hid-
+sp18-516/technology/abstract-mariadb.tex line 6: Double space found. also the
+founder of MySQL AB ~\cite{hid-sp18-516-wiki-mariadb}. It supports a broad
+^ Warning 39 in ../hid-sp18-516/technology/abstract-mariadb.tex line 9: Double
+space found. scalable ~\cite{hid-sp18-516-mariadb-server}. ``It includes XtraDB
+storage engine for           ^
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -315,84 +486,8 @@ hid-sp18-516
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 13 in ../hid-sp18-516/technology/abstract-tokudb.tex line 3:
-Intersentence spacing (`\@') should perhaps be used. IMPROVE: WE DO NOT DO URLS
-in TECHNOLOGIES          ^ Warning 2 in ../hid-sp18-516/technology/abstract-
-tokudb.tex line 16: Non-breaking space (`~') should have been used. server
-\cite{www-wikipedia}. It “reduces the deployment costs associated with
-^ Warning 2 in ../hid-sp18-516/technology/abstract-tokudb.tex line 18: Non-
-breaking space (`~') should have been used. requirements of big data
-applications” \cite{www-percona}. It “provides indexing-
-^ Warning 2 in ../hid-sp18-516/technology/abstract-tokudb.tex line 20: Non-
-breaking space (`~') should have been used. memory” \cite{www-wikipedia}.
-“Because of its exceptional indexing performance,             ^
-\end{verbatim}
-\end{tiny}
-\end{IU}
-
-\input{../hid-sp18-521/technology/abstract-athena}
-
-\begin{IU}
-
-hid-sp18-521
-
-\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-athena.tex}{abstract-athena.tex}
-
-\begin{tiny}
-\begin{verbatim}
-lacheck: "../hid-sp18-521/technology/abstract-athena.tex", line 6: missing `\@' before
-`.' in "SQL."
-chktex: Warning 2 in ../hid-sp18-521/technology/abstract-athena.tex line 5: Non-breaking
-space (`~') should have been used. Amazon Athena \cite{hid-sp18-521-athena-faq}
-allows you to analyze data                ^ Warning 13 in ../hid-
-sp18-521/technology/abstract-athena.tex line 6: Intersentence spacing (`\@')
-should perhaps be used. stored in Amazon S3 using SQL. It was created with the
-purpose of                                ^
-\end{verbatim}
-\end{tiny}
-\end{IU}
-
-\input{../hid-sp18-521/technology/abstract-emr}
-
-\begin{IU}
-
-hid-sp18-521
-
-\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-emr.tex}{abstract-emr.tex}
-
-\begin{tiny}
-\begin{verbatim}
-lacheck: "../hid-sp18-521/technology/abstract-emr.tex", line 11: missing `\@' before `.'
-in "DB."
-chktex: Warning 2 in ../hid-sp18-521/technology/abstract-emr.tex line 5: Non-breaking
-space (`~') should have been used. Amazon EMR \cite{hid-sp18-521-AmazonEMR} is a
-managed Hadoop framework              ^ Warning 13 in ../hid-
-sp18-521/technology/abstract-emr.tex line 11: Intersentence spacing (`\@')
-should perhaps be used. stores like S3 and DynamoDB. Using EMR allows a user to
-setup and provision                               ^
-\end{verbatim}
-\end{tiny}
-\end{IU}
-
-\input{../hid-sp18-521/technology/abstract-fission}
-
-\begin{IU}
-
-hid-sp18-521
-
-\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-fission.tex}{abstract-fission.tex}
-
-\begin{tiny}
-\begin{verbatim}
-lacheck: "../hid-sp18-521/technology/abstract-fission.tex", line 10: missing `\@' before
-`.' in "CLI."
-chktex: Warning 2 in ../hid-sp18-521/technology/abstract-fission.tex line 4: Non-
-breaking space (`~') should have been used. Fission \cite{hid-
-sp18-521-FissionBlog} is a serverless framework for          ^ Warning 13 in
-../hid-sp18-521/technology/abstract-fission.tex line 10: Intersentence spacing
-(`\@') should perhaps be used. a variety of languages and then add them with a
-CLI. You can then                                                       ^
+lacheck:
+"../hid-sp18-516/technology/abstract-tokudb.tex", line 14: double space at " ~"
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -407,10 +502,6 @@ hid-sp18-521
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 2 in ../hid-sp18-521/technology/abstract-greengrass.tex line 5: Non-
-breaking space (`~') should have been used. AWS Greengrass \cite{hid-
-sp18-521-Greengrass} lets the user run local compute,                  ^
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -425,10 +516,6 @@ hid-sp18-521
 
 \begin{tiny}
 \begin{verbatim}
-lacheck: 
-chktex: Warning 2 in ../hid-sp18-521/technology/abstract-sagemaker.tex line 5: Non-
-breaking space (`~') should have been used. Amazon SageMaker \cite{hid-
-sp18-521-Sagemaker} was created to allow users                    ^
 \end{verbatim}
 \end{tiny}
 \end{IU}
@@ -445,6 +532,8 @@ hid-sp18-203
 
 \url{https://github.com/cloudmesh-community/hid-sp18-203/issue}
 
+hid-sp18-203.bib is missing
+
 \end{IU}
 \input{../hid-sp18-204/bio-Gruenberg-Max.tex}
 
@@ -455,6 +544,8 @@ hid-sp18-204
 \url{https://github.com/cloudmesh-community/hid-sp18-204}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-204/issue}
+
+hid-sp18-204.bib is missing
 
 \end{IU}
 \input{../hid-sp18-206/bio-mhatre-krish-hemant.tex}
@@ -467,6 +558,8 @@ hid-sp18-206
 
 \url{https://github.com/cloudmesh-community/hid-sp18-206/issue}
 
+hid-sp18-206.bib is missing
+
 \end{IU}
 \input{../hid-sp18-208/bio-fanbo-sun.tex}
 
@@ -477,6 +570,8 @@ hid-sp18-208
 \url{https://github.com/cloudmesh-community/hid-sp18-208}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-208/issue}
+
+hid-sp18-208.bib is missing
 
 \end{IU}
 \input{../hid-sp18-209/bio-tugman-anthony.tex}
@@ -489,6 +584,8 @@ hid-sp18-209
 
 \url{https://github.com/cloudmesh-community/hid-sp18-209/issue}
 
+hid-sp18-209.bib is missing
+
 \end{IU}
 \input{../hid-sp18-401/bio-arra-goutham.tex}
 
@@ -499,6 +596,8 @@ hid-sp18-401
 \url{https://github.com/cloudmesh-community/hid-sp18-401}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-401/issue}
+
+hid-sp18-401.bib is missing
 
 \end{IU}
 \input{../hid-sp18-402/bio-athaley-sushant.tex}
@@ -511,6 +610,8 @@ hid-sp18-402
 
 \url{https://github.com/cloudmesh-community/hid-sp18-402/issue}
 
+hid-sp18-402.bib is missing
+
 \end{IU}
 \input{../hid-sp18-403/bio-axthelm-alex.tex}
 
@@ -521,6 +622,8 @@ hid-sp18-403
 \url{https://github.com/cloudmesh-community/hid-sp18-403}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-403/issue}
+
+hid-sp18-403.bib is missing
 
 \end{IU}
 \input{../hid-sp18-405/bio-Chen-Min.tex}
@@ -543,6 +646,8 @@ hid-sp18-405
 
 \href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-linkedinwherehows.tex}{abstract-linkedinwherehows.tex}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/hid-sp18-405.bib}{../hid-sp18-405/technology/hid-sp18-405.bib}
+
 \end{IU}
 \input{../hid-sp18-406/bio-dg-ramyashree.tex}
 
@@ -553,6 +658,8 @@ hid-sp18-406
 \url{https://github.com/cloudmesh-community/hid-sp18-406}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-406/issue}
+
+hid-sp18-406.bib is missing
 
 \end{IU}
 \input{../hid-sp18-407/bio-hickman-keith.tex}
@@ -565,6 +672,8 @@ hid-sp18-407
 
 \url{https://github.com/cloudmesh-community/hid-sp18-407/issue}
 
+hid-sp18-407.bib is missing
+
 \end{IU}
 \input{../hid-sp18-408/bio-Joshi-Manoj.tex}
 
@@ -575,6 +684,8 @@ hid-sp18-408
 \url{https://github.com/cloudmesh-community/hid-sp18-408}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-408/issue}
+
+hid-sp18-408.bib is missing
 
 \end{IU}
 \input{../hid-sp18-409/bio-kadupitige-kadupitiya.tex}
@@ -587,6 +698,8 @@ hid-sp18-409
 
 \url{https://github.com/cloudmesh-community/hid-sp18-409/issue}
 
+hid-sp18-409.bib is missing
+
 \end{IU}
 \input{../hid-sp18-410/bio-Kamatgi-Karan.tex}
 
@@ -597,6 +710,8 @@ hid-sp18-410
 \url{https://github.com/cloudmesh-community/hid-sp18-410}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-410/issue}
+
+hid-sp18-410.bib is missing
 
 \end{IU}
 \input{../hid-sp18-411/bio-kaveripakam-venkateshaditya.tex}
@@ -609,6 +724,8 @@ hid-sp18-411
 
 \url{https://github.com/cloudmesh-community/hid-sp18-411/issue}
 
+hid-sp18-411.bib is missing
+
 \end{IU}
 \input{../hid-sp18-416/bio-Ossen-Sabra.tex}
 
@@ -619,6 +736,8 @@ hid-sp18-416
 \url{https://github.com/cloudmesh-community/hid-sp18-416}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-416/issue}
+
+hid-sp18-416.bib is missing
 
 \end{IU}
 \input{../hid-sp18-417/bio-ray-rashmi.tex}
@@ -631,6 +750,8 @@ hid-sp18-417
 
 \url{https://github.com/cloudmesh-community/hid-sp18-417/issue}
 
+hid-sp18-417.bib is missing
+
 \end{IU}
 \input{../hid-sp18-419/bio-sobolik-bertolt.tex}
 
@@ -641,6 +762,20 @@ hid-sp18-419
 \url{https://github.com/cloudmesh-community/hid-sp18-419}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-419/issue}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-clive.tex}{abstract-clive.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-neptune.tex}{abstract-neptune.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-opendaylight.tex}{abstract-opendaylight.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-hcatalog.tex}{abstract-hcatalog.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/abstract-pig.tex}{abstract-pig.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-419/blob/master//technology/hid-sp18-419.bib}{../hid-sp18-419/technology/hid-sp18-419.bib}
+
+Error: you did not use howpublished = \{Web Page\},
 
 \end{IU}
 \input{../hid-sp18-420/bio-sowani-swarnima.tex}
@@ -653,6 +788,8 @@ hid-sp18-420
 
 \url{https://github.com/cloudmesh-community/hid-sp18-420/issue}
 
+hid-sp18-420.bib is missing
+
 \end{IU}
 \input{../hid-sp18-421/bio-Vijjigiri-Priyadarshini.tex}
 
@@ -663,6 +800,8 @@ hid-sp18-421
 \url{https://github.com/cloudmesh-community/hid-sp18-421}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-421/issue}
+
+hid-sp18-421.bib is missing
 
 \end{IU}
 \input{../hid-sp18-422/bio-cutilli-benjamin.tex}
@@ -675,6 +814,8 @@ hid-sp18-422
 
 \url{https://github.com/cloudmesh-community/hid-sp18-422/issue}
 
+hid-sp18-422.bib is missing
+
 \end{IU}
 \input{../hid-sp18-501/bio-tolu-agunbiade.tex}
 
@@ -686,6 +827,8 @@ hid-sp18-501
 
 \url{https://github.com/cloudmesh-community/hid-sp18-501/issue}
 
+hid-sp18-501.bib is missing
+
 \end{IU}
 \input{../hid-sp18-502/bio-alshi-ankita.tex}
 
@@ -696,6 +839,8 @@ hid-sp18-502
 \url{https://github.com/cloudmesh-community/hid-sp18-502}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-502/issue}
+
+hid-sp18-502.bib is missing
 
 \end{IU}
 \input{../hid-sp18-503/bio-arnav-arnav.tex}
@@ -712,6 +857,8 @@ hid-sp18-503
 
 \href{https://github.com/cloudmesh-community/hid-sp18-503/blob/master//technology/abstract-carbondata.tex}{abstract-carbondata.tex}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-503/blob/master//technology/hid-sp18-503.bib}{../hid-sp18-503/technology/hid-sp18-503.bib}
+
 \end{IU}
 \input{../hid-sp18-504/bio-moeen-arshad.tex}
 
@@ -722,6 +869,8 @@ hid-sp18-504
 \url{https://github.com/cloudmesh-community/hid-sp18-504}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-504/issue}
+
+hid-sp18-504.bib is missing
 
 \end{IU}
 \input{../hid-sp18-505/bio-cate-averill.tex}
@@ -746,6 +895,8 @@ hid-sp18-505
 
 \href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/abstract-mapbox.tex}{abstract-mapbox.tex}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/hid-sp18-505.bib}{../hid-sp18-505/technology/hid-sp18-505.bib}
+
 \end{IU}
 \input{../hid-sp18-506/bio-esteban-orly.tex}
 
@@ -756,6 +907,8 @@ hid-sp18-506
 \url{https://github.com/cloudmesh-community/hid-sp18-506}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-506/issue}
+
+hid-sp18-506.bib is missing
 
 \end{IU}
 \input{../hid-sp18-507/bio-giuliani-stephen.tex}
@@ -768,6 +921,8 @@ hid-sp18-507
 
 \url{https://github.com/cloudmesh-community/hid-sp18-507/issue}
 
+hid-sp18-507.bib is missing
+
 \end{IU}
 \input{../hid-sp18-508/bio-guo-yue.tex}
 
@@ -778,6 +933,8 @@ hid-sp18-508
 \url{https://github.com/cloudmesh-community/hid-sp18-508}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-508/issue}
+
+hid-sp18-508.bib is missing
 
 \end{IU}
 \input{../hid-sp18-510/bio-kaul-naveen.tex}
@@ -790,6 +947,8 @@ hid-sp18-510
 
 \url{https://github.com/cloudmesh-community/hid-sp18-510/issue}
 
+hid-sp18-510.bib is missing
+
 \end{IU}
 \input{../hid-sp18-511/bio-Khandelwal-Sandeep.tex}
 
@@ -801,6 +960,20 @@ hid-sp18-511
 
 \url{https://github.com/cloudmesh-community/hid-sp18-511/issue}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-apttus.tex}{abstract-apttus.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-linode.tex}{abstract-linode.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-iics.tex}{abstract-iics.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-rapidminer.tex}{abstract-rapidminer.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/abstract-treasuredata.tex}{abstract-treasuredata.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-511/blob/master//technology/hid-sp18-511.bib}{../hid-sp18-511/technology/hid-sp18-511.bib}
+
+Error: you did not use howpublished = \{Web Page\},
+
 \end{IU}
 \input{../hid-sp18-512/bio-kikaya-felix.tex}
 
@@ -811,6 +984,8 @@ hid-sp18-512
 \url{https://github.com/cloudmesh-community/hid-sp18-512}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-512/issue}
+
+hid-sp18-512.bib is missing
 
 \end{IU}
 \input{../hid-sp18-513/bio-kugan-uma.tex}
@@ -833,6 +1008,22 @@ hid-sp18-513
 
 \href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-oozie.tex}{abstract-oozie.tex}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/hid-sp18-513.bib}{../hid-sp18-513/technology/hid-sp18-513.bib}
+
+ Error Citation Label wrong: oozie
+
+ Error Citation Label wrong: datameer
+
+ Error Citation Label wrong: docker
+
+ Error Citation Label wrong: opensource
+
+ Error Citation Label wrong: neo4j
+
+ Error Citation Label wrong: tableau
+
+Error: you did not use howpublished = \{Web Page\},
+
 \end{IU}
 \input{../hid-sp18-514/bio-lambadi-ravinder.tex}
 
@@ -844,6 +1035,8 @@ hid-sp18-514
 
 \url{https://github.com/cloudmesh-community/hid-sp18-514/issue}
 
+hid-sp18-514.bib is missing
+
 \end{IU}
 \input{../hid-sp18-515/bio-Lin-Qingyun.tex}
 
@@ -854,6 +1047,8 @@ hid-sp18-515
 \url{https://github.com/cloudmesh-community/hid-sp18-515}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-515/issue}
+
+hid-sp18-515.bib is missing
 
 \end{IU}
 \input{../hid-sp18-516/bio-pathan-shagufta.tex}
@@ -870,6 +1065,10 @@ hid-sp18-516
 
 \href{https://github.com/cloudmesh-community/hid-sp18-516/blob/master//technology/abstract-tokudb.tex}{abstract-tokudb.tex}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-516/blob/master//technology/hid-sp18-516.bib}{../hid-sp18-516/technology/hid-sp18-516.bib}
+
+Error: you did not use howpublished = \{Web Page\},
+
 \end{IU}
 \input{../hid-sp18-517/bio-pitkar-harshad.tex}
 
@@ -880,6 +1079,8 @@ hid-sp18-517
 \url{https://github.com/cloudmesh-community/hid-sp18-517}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-517/issue}
+
+hid-sp18-517.bib is missing
 
 \end{IU}
 \input{../hid-sp18-518/bio-robinson-michael.tex}
@@ -892,6 +1093,8 @@ hid-sp18-518
 
 \url{https://github.com/cloudmesh-community/hid-sp18-518/issue}
 
+hid-sp18-518.bib is missing
+
 \end{IU}
 \input{../hid-sp18-519/bio-shukla-saurabh.tex}
 
@@ -903,6 +1106,8 @@ hid-sp18-519
 
 \url{https://github.com/cloudmesh-community/hid-sp18-519/issue}
 
+hid-sp18-519.bib is missing
+
 \end{IU}
 \input{../hid-sp18-520/bio-Sinha-Arijit.tex}
 
@@ -913,6 +1118,8 @@ hid-sp18-520
 \url{https://github.com/cloudmesh-community/hid-sp18-520}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-520/issue}
+
+hid-sp18-520.bib is missing
 
 \end{IU}
 \input{../hid-sp18-521/bio-steinbruegge-scott.tex}
@@ -935,6 +1142,10 @@ hid-sp18-521
 
 \href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-emr.tex}{abstract-emr.tex}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/hid-sp18-521.bib}{../hid-sp18-521/technology/hid-sp18-521.bib}
+
+Error: you did not use howpublished = \{Web Page\},
+
 \end{IU}
 \input{../hid-sp18-523/bio-tandon-ritesh.tex}
 
@@ -945,6 +1156,8 @@ hid-sp18-523
 \url{https://github.com/cloudmesh-community/hid-sp18-523}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-523/issue}
+
+hid-sp18-523.bib is missing
 
 \end{IU}
 \input{../hid-sp18-524/bio-tian-hao.tex}
@@ -957,6 +1170,8 @@ hid-sp18-524
 
 \url{https://github.com/cloudmesh-community/hid-sp18-524/issue}
 
+hid-sp18-524.bib is missing
+
 \end{IU}
 \input{../hid-sp18-525/bio-walker-bruce.tex}
 
@@ -967,6 +1182,8 @@ hid-sp18-525
 \url{https://github.com/cloudmesh-community/hid-sp18-525}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-525/issue}
+
+hid-sp18-525.bib is missing
 
 \end{IU}
 \input{../hid-sp18-526/bio-whitson-timothy.tex}
@@ -979,6 +1196,8 @@ hid-sp18-526
 
 \url{https://github.com/cloudmesh-community/hid-sp18-526/issue}
 
+hid-sp18-526.bib is missing
+
 \end{IU}
 \input{../hid-sp18-601/bio-gianlupi-juliano.tex}
 
@@ -990,6 +1209,8 @@ hid-sp18-601
 
 \url{https://github.com/cloudmesh-community/hid-sp18-601/issue}
 
+hid-sp18-601.bib is missing
+
 \end{IU}
 \input{../hid-sp18-602/bio-naredla-keerthi.tex}
 
@@ -1000,5 +1221,7 @@ hid-sp18-602
 \url{https://github.com/cloudmesh-community/hid-sp18-602}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-602/issue}
+
+hid-sp18-602.bib is missing
 
 \end{IU}
